--- a/HomeWork_8/App.config
+++ b/HomeWork_8/App.config
@@ -1,6 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="HomeWork_8.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="HomeWork_8.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <HomeWork_8.Properties.Settings>
+            <setting name="UserName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Age" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Occupation" serializeAs="String">
+                <value />
+            </setting>
+        </HomeWork_8.Properties.Settings>
+    </userSettings>
+    <applicationSettings>
+        <HomeWork_8.Properties.Settings>
+            <setting name="StartMsg" serializeAs="String">
+                <value>Привет, друг!</value>
+            </setting>
+        </HomeWork_8.Properties.Settings>
+    </applicationSettings>
 </configuration>
