--- a/HomeWork_8/App.config
+++ b/HomeWork_8/App.config
@@ -17,7 +17,7 @@
                 <value />
             </setting>
             <setting name="Age" serializeAs="String">
-                <value />
+                <value>0</value>
             </setting>
             <setting name="Occupation" serializeAs="String">
                 <value />
